fixed navbar shift on resize, fixed up bookstyle pages and corrected 3d order

--- a/static/styles/bookstyle.css
+++ b/static/styles/bookstyle.css
@@ -30,6 +30,7 @@ body {
   background: transparent;
   border: none;
   transition-duration: 0.2s;
+  z-index: 2;
 }
 .pageturner:hover {
   box-shadow: 0px 4px 10px var(--theme-box-shadow);
@@ -65,6 +66,8 @@ body {
   top: 0%;
   left: 0%;
   background-color: var(--theme-background);
+  padding: 10px;
+  z-index: 0;
 }
 .page.right {
   left: 50%;
@@ -84,6 +87,7 @@ body {
   padding-right: 15px;
   transform: translateY(-80px);
   animation: hideMenubar 0s ease-in-out forwards;
+  z-index: 5;
 }
 .menubar.text {
   font-family: Inter;
@@ -132,4 +136,18 @@ option {
   left: calc(50% - 1px);
   background-color: var(--theme-text);
   filter: blur(10px);
+  z-index: 1;
+}
+.toclistitem {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 20px;
+  margin-left: 10px;
+}
+.tocline {
+  flex: 1;
+  height: 15px;
+  border-bottom: #000000 1px dotted;
+  border-bottom-style: dotted 2px;
 }
